--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -32,11 +32,15 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        language: [ 'cpp', 'java', 'python' ]
+        language: [ 'java', 'python' ]
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
+
+    - name: Setup Bazel
+      if: matrix.language == 'java'
+      uses: abhinavsingh/setup-bazel@v3
 
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
@@ -45,13 +49,10 @@ jobs:
         languages: ${{ matrix.language }}
         # queries: security-extended,security-and-quality
 
-
-    - name: Autobuild
-      uses: github/codeql-action/autobuild@v2
-
-    # - run: |
-    #     echo "Run, Build Application using script"
-    #     ./location_of_script_within_repo/buildscript.sh
+    - if: matrix.language == 'java'
+      run: |
+        cd converter/earlybird/core/earlybird
+        bazel build
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
