--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -12,13 +12,16 @@
 name: "CodeQL"
 
 on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    # The branches below must be a subset of the branches above
-    branches: [ "main" ]
-  schedule:
-    - cron: '38 18 * * 2'
+  workflow_dispatch:
+
+# Disable this workflow
+#   push:
+#     branches: [ "main" ]
+#   pull_request:
+#     # The branches below must be a subset of the branches above
+#     branches: [ "main" ]
+#   schedule:
+#     - cron: '38 18 * * 2'
 
 jobs:
   analyze:
